--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.66"
+anyhow = { version = "1.0.66" } # this isn't added to the library yet: features = ["file-lines"]
 chrono = "0.4.23"
 clap = { version = "4.0.23", features = ['derive'] }
 env_logger = "0.9.3"
