--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.66" } # this isn't added to the library yet: features = ["file-lines"]
+cpal = "0.14.2"
 chrono = "0.4.23"
 clap = { version = "4.0.23", features = ['derive'] }
 env_logger = "0.9.3"
 log = "0.4.17"
 simple-webrtc = { path="../", features = ["test-server"]  }
 tokio = { version = "1.22.0", features = ["full"] }
+webrtc = "0.6.0"
