--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
+bytes = "1"
+cpal = "0.14.2"
 log = "0.4.17"
+opus = "0.3.0"
 uuid = "1.2.2"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0"
