--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cpal = "0.14.2"
 log = "0.4.17"
 opus = "0.3.0"
 uuid = "1.2.2"
+rand = "0.8.5"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.22.0", features = ["full"] }
